fix: Improve header, action buttons and progress bar spacing

--- a/web/styles/main.scss
+++ b/web/styles/main.scss
@@ -65,7 +65,7 @@ body {
       max-width: var(--#{"editor-width"});
       margin: auto;
       font-size: 28px;
-      padding: 10px 0;
+      padding: 8px 0;
       display: flex;
       flex-direction: row;
 
@@ -119,7 +119,6 @@ body {
 
   .sb-actions {
     display: flex;
-    align-items: baseline;
     flex: 0 0 auto;
     text-align: right;
   }
@@ -127,10 +126,9 @@ body {
   .progress-wrapper {
     display: inline-block;
     position: relative;
-    top: -6px;
+    margin-top: 4px;
     padding: 4px;
     background-color: var(--top-background-color);
-    margin-right: -2px;
   }
 
   .progress-bar {
@@ -138,15 +136,11 @@ body {
     justify-content: center;
     align-items: center;
 
-    width: 20px;
-    height: 20px;
+    width: 24px;
+    height: 24px;
     border-radius: 50%;
-    font-size: 6px;
+    font-size: 8px;
   }
-
-  // .progress-bar::before {
-  //   content: "66%";
-  // }
 }
 
 .sb-panel {
